--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "resend": "^6.0.3"
@@ -23,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-google-recaptcha": "^2.1.9",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
