--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "19.1.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "resend": "^6.0.3"
   },
