--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
-    "lucide-react": "^0.544.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -21,8 +18,7 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "resend": "^6.0.3",
-    "tailwind-merge": "^3.3.1"
+    "resend": "^6.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -31,7 +27,6 @@
     "@types/react-dom": "^19",
     "@types/react-google-recaptcha": "^2.1.9",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
 }
