--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "resend": "^6.0.3"
+    "resend": "^6.0.3",
+    "weather-icons-react": "^1.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
