--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,6 @@ RESEND_FROM_EMAIL=from@example.com
 RESEND_TO_EMAIL=to@example.com
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=site_key
 RECAPTCHA_SECRET_KEY=secret_key
-RECAPTCHA_VERIFY_URL=recaptcha_verify_url
+RECAPTCHA_VERIFY_URL=https://www.google.com/recaptcha/api/siteverify
+TOMORROW_API_KEY=tomorrow_api_key
+TOMORROW_URL=https://api.tomorrow.io/v4/weather/forecast
