--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ RESEND_TO_EMAIL=to@example.com
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=site_key
 RECAPTCHA_SECRET_KEY=secret_key
 RECAPTCHA_VERIFY_URL=recaptcha_verify_url
+OPEN_METEO_URL=https://api.open-meteo.com/v1/forecast
+IPIFY=https://api64.ipify.org?format=json
+IP_API_URL=http://ip-api.com/json
+IP_API_FIELDS=status,message,city,lat,lon
