--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@vercel/edge": "^1.2.2",
+    "dayjs": "^1.11.18",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.545.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
