--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ RESEND_FROM_EMAIL=from@example.com
 RESEND_TO_EMAIL=to@example.com
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=site_key
 RECAPTCHA_SECRET_KEY=secret_key
-RECAPTCHA_VERIFY_URL=recaptcha_verify_url
+RECAPTCHA_VERIFY_URL=https://www.google.com/recaptcha/api/siteverify
 OPEN_METEO_URL=https://api.open-meteo.com/v1/forecast
 IPIFY=https://api64.ipify.org?format=json
 IP_API_URL=http://ip-api.com/json
