--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ RECAPTCHA_VERIFY_URL=https://www.google.com/recaptcha/api/siteverify
 OPEN_METEO_URL=https://api.open-meteo.com/v1/forecast
 IPIFY=https://api64.ipify.org?format=json
 IP_API_URL=http://ip-api.com/json
-IP_API_FIELDS=status,message,city,lat,lon
+IP_API_FIELDS=status,message,city,region,lat,lon
