--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-rnd": "^10.5.2",
     "resend": "^6.0.3",
     "weather-icons-react": "^1.2.0"
   },
