--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@vercel/edge": "^1.2.2",
+    "countries-and-timezones": "^3.8.0",
     "dayjs": "^1.11.18",
     "framer-motion": "^12.23.12",
     "fuse.js": "^7.1.0",
