--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "luxon": "^3.7.2",
     "next": "15.4.6",
     "react": "19.1.0",
+    "react-clock": "^6.0.0",
     "react-dom": "19.1.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.62.0",
