--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@vercel/edge": "^1.2.2",
     "countries-and-timezones": "^3.8.0",
     "dayjs": "^1.11.18",
@@ -30,6 +31,7 @@
     "react-rnd": "^10.5.2",
     "react-select": "^5.10.2",
     "resend": "^6.0.3",
+    "uuid": "^13.0.0",
     "weather-icons-react": "^1.2.0"
   },
   "devDependencies": {
