--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-select": "^5.10.2",
     "resend": "^6.0.3",
     "uuid": "^13.0.0",
-    "weather-icons-react": "^1.2.0"
+    "weather-icons-react": "^1.2.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
