--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-rnd": "^10.5.2",
     "react-select": "^5.10.2",
     "resend": "^6.0.3",
+    "swr": "^2.3.6",
     "uuid": "^13.0.0",
     "weather-icons-react": "^1.2.0",
     "zustand": "^5.0.8"
