--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.545.0",
     "luxon": "^3.7.2",
-    "next": "15.4.6",
-    "react": "19.1.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
     "react-clock": "^6.0.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
